fix alignment of note preview button

--- a/styles/components.scss
+++ b/styles/components.scss
@@ -73,3 +73,8 @@
 .moj-badge {
   background-color: white;
 }
+
+.preview-button {
+  margin-Bottom: 0px;
+  white-space: nowrap;
+}
