--- a/styles/page.scss
+++ b/styles/page.scss
@@ -26,7 +26,4 @@ body {
       padding-top: 0;
     }
   }
-  .number-of-notes {
-    text-align: center;
-  }
 }
